--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <LINK rel="stylesheet" type="text/css" href="styles/main.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="data:;base64,iVBORw0KGgo="> <!-- to prevent favicon error -->
     <title>Vegans - Babble</title>
 </head>
 
