--- a/client/index.html
+++ b/client/index.html
@@ -75,12 +75,12 @@
 
             <form class="register-form" >
                 <div class="fullname-div">
-                    <label class="username-label">Full name:</label>
-                    <input class="username-input"  type="text" name="name" >
+                    <label class="username-label" for="name">Full name:</label>
+                    <input class="username-input" type="text" id="name" >
                 </div>
                 <div class="email-div">
-                    <label class="email-label" >Email:</label>
-                    <input class="email-input"  type="text" name="email" >
+                    <label class="email-label" for="email">Email:</label>
+                    <input class="email-input"  type="text" id="email" >
                 </div>
 
                 <div class="modal-buttons-div">
